# WebAssemblyByRust

./: .gitignore  README.md
get_prime/: Cargo.toml  README.md  index.html
get_prime/src/: lib.rs
